# uplift-modeling-criteo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: pages.yml
artifacts/: results.csv
artifacts/experiments/: results.csv
experiments/: README.md  configs.py  runner.py  sweep.py
notebooks/: 01_eda.ipynb  02_learners.ipynb  03_causal_forest.ipynb
notebooks/part1_criteo_replication/: 01_eda.ipynb  02_learners.ipynb  03_causal_forest.ipynb  04_evaluation.ipynb  README.md
notebooks/part2_base_learner_sensitivity/: 00_sweep_walkthrough.ipynb  01_sweep_results.ipynb  README.md
paper/: README.md  paper.html
scripts/: download_data.py
src/uplift/: __init__.py  base_learners.py  data.py  diagnostics.py  eda.py  evaluation.py  hillstrom.py  plots.py  split.py
src/uplift/learners/: __init__.py  causal_forest.py  class_transformation.py  propensity_baseline.py  s_learner.py  t_learner.py  x_learner.py
tests/: test_base_learners.py
