[project]
name = "uplift"
version = "0.1.0"
description = "Uplift-modeling benchmark on the Criteo Uplift Prediction Dataset (Diemert et al. 2018)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas>=2.2,<3.0",
    "pyarrow>=17.0,<20.0",
    "numpy>=1.26,<3.0",
    "scipy>=1.13,<2.0",
    "scikit-uplift>=0.5.1,<0.6",
    "matplotlib>=3.9,<4.0",
    "seaborn>=0.13,<0.14",
    "jupyterlab>=4.2,<5.0",
    "requests>=2.32,<3.0",
    "tqdm>=4.66,<5.0",
    "xgboost>=2.1,<3.0",
    "econml>=0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.6,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uplift"]
